--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -29,6 +29,24 @@
 				id="valeur" name="valeur" /> <label class="form-label"
 				th:text="#{NotificationJoursAvant}" for="valeur"></label>
 		</div>
+		
+		<!--/*  
+		<div th:fragment="notifieDelai" class="form-floating mb-3">
+			<input placeholder="" class="form-control" type="number"
+				id="notifDelai" step="1" min="0" /> <label class="form-label"
+				th:text="#{NotificationJoursAvant}" for="notifDelai"></label>
+		</div>
+		<div th:fragment="tacheDuree" class="form-floating mb-3">
+			<input placeholder="" class="form-control" type="number"
+				id="tacheDuree" step="1" min="0" /> <label class="form-label"
+				th:text="#{TacheDuree}" for="tacheDuree"></label>
+		</div>
+		<div th:fragment="notifPersite" class="form-check">
+			<input id="notifPersite" class="form-check-input" type="checkbox" />
+			<label class="form-check-label" for="notifPersite" th:text="#{notifPersite}"></label>
+		</div>
+		*/-->
+		
 		<div th:fragment="finTraitement" class="form-check">
 			<input class="form-check-input" type="checkbox" id="finTraitement"
 				name="finTraitement" /> <label class="form-check-label"
