--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -3,7 +3,7 @@
 	xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="common_header(scripts,styles,links)">
 <title th:text="#{Ruches}"></title>
-<link rel="manifest" href="manifest.webmanifest">
+<link rel="manifest" th:href="@{/js/manifest.webmanifest}" />
 <meta charset="UTF-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1">
