--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
 <head>
 <title th:text="#{connexion}"></title>
 <meta charset="UTF-8" />
+<link rel="manifest" th:href="@{/js/manifest.webmanifest}" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
