--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -5,10 +5,11 @@
 <link th:replace="include :: cssdatetimepicker"/>
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:inline="javascript">
+	const complet = /*[[${complet}]]*/ null;
 	$().ready(function() {
-		if ([[${complet}]] === "false") {
-			$('#showruches').prop('checked', false);
-			$(".ruches").hide();
+		if (complet === "true") {
+			$('#showruches').prop('checked', true);
+			$(".ruches").show();
 		}
 		$('#showruches').on('click', function () {
 			if($(this).is(":checked")) {
@@ -54,7 +55,9 @@
 			</div>
 			<div class="col">
        			<span class="padicons">
-       				<input type="checkbox" id="showruches" th:title="#{afficherrucheetc}" th:text="#{afficherPlus}" checked/>
+       			
+       				<input type="checkbox" id="showruches" th:title="#{afficherrucheetc}" th:text="#{afficherPlus}" />
+				
 				</span>
 			</div>
 		</div>
@@ -64,6 +67,13 @@
 		<input type="hidden" th:field="*{id}" />
 		<div th:replace="includeForm :: dateField"></div>
 		<div class="form-floating mb-3">
+			<input placeholder=""
+				class="form-control" type="number" step="0.001"
+				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
+			<label class="form-label" for="valeur" th:text="#{valeur}"></label>
+		</div>
+		<div th:replace="includeForm :: commentaireField"></div>
+		<div class="form-floating mb-3 ruches"  style="display:none">
 			<select
 				class="form-control" th:field="*{type}">
 				<option
@@ -72,7 +82,7 @@
 			</select>
 			<label class="form-label" for="typeEvenement" th:text="#{typeEvenement}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches">
+		<div class="form-floating mb-3 ruches"  style="display:none">
 			<select
 				class="form-control" th:field="*{ruche}">
 				<option th:text="#{aucune}" value=""></option>
@@ -81,7 +91,7 @@
 			</select>
 			<label class="form-label" for="ruche" th:text="#{ruche}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches">
+		<div class="form-floating mb-3 ruches"  style="display:none">
 			<select
 				class="form-control" th:field="*{essaim}">
 				<option th:text="#{aucun}" value=""></option>
@@ -90,7 +100,7 @@
 			</select>
 			<label class="form-label" for="essaim" th:text="#{essaim}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches">
+		<div class="form-floating mb-3 ruches"  style="display:none">
 			<select
 				class="form-control" th:field="*{rucher}">
 				<option th:text="#{aucun}" value=""></option>
@@ -99,7 +109,7 @@
 			</select>
 			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
 		</div>
-		<div class="form-floating mb-3 ruches">
+		<div class="form-floating mb-3 ruches"  style="display:none">
 			<select
 				class="form-control" th:field="*{hausse}">
 				<option th:text="#{aucune}" value=""></option>
@@ -107,14 +117,7 @@
 					th:text="${hausseopt.nom}"></option>
 			</select>
 			<label for="hausse" th:text="#{hausse}"></label>
-		</div>
-		<div class="form-floating mb-3">
-			<input placeholder=""
-				class="form-control" type="number" step="0.001"
-				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
-			<label class="form-label" for="valeur" th:text="#{valeur}"></label>
-		</div>
-		<div th:replace="includeForm :: commentaireField"></div>
+		</div>		
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
