jquery validate 1.19.15, moment 2.29.4, html inline js

--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -3,13 +3,16 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const notListEmpty = /*[[${not #lists.isEmpty(ruchers)}]]*/ null;
+const pnnonsupp = /*[[#{personnenonsupprimeerefrrucher}]]*/ null;
+const supppers = /*[[#{supprimercettepersonne}]]*/ null;
 $().ready(function() {
 	$('.confirmation').on('click', function () {
-		if([[${not #lists.isEmpty(ruchers)}]]) {
-			alert([[#{personnenonsupprimeerefrrucher}]]);
+		if(notListEmpty) {
+			alert(pnnonsupp);
 			return false;
 		} else {
-			return confirm([[#{supprimercettepersonne}]]);
+			return confirm(supppers);
 		}
     });
 });
