--- a/src/main/resources/templates/essaim/essaimGraphe.html
+++ b/src/main/resources/templates/essaim/essaimGraphe.html
@@ -4,7 +4,7 @@
 <script th:replace="include :: d3"></script>
 <script th:src="@{/js/ruches/essaimGraphe.js}"></script>
 <script th:inline="javascript">
-	const data = [(${essaimTree})];
+	const data = /*[(${essaimTree})]*/ null;
 	const essaimnom = /*[[${essaim.nom}]]*/ null;
 	const essaimtxt = /*[[#{essaim}]]*/ null;
 	const ruchetxt = /*[[#{ruche}]]*/ null;
