--- a/src/main/resources/templates/essaim/essaimSucreForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreForm.html
@@ -47,12 +47,22 @@
         	</div>
         </div>
     </div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/'+${essaim.id}}"
-		method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="ESSAIMSUCRE" />
-		<div th:replace="includeForm :: date"></div>
-		<div th:replace="includeForm :: poidskg"></div>
-		<div th:replace="includeForm :: commentaire"></div>
+	<form action="#" th:action="@{'/evenement/essaim/sauve2'}"
+		th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" />
+		<input type="hidden" th:field="*{type}" />
+		<input type="hidden" th:field="*{ruche}" />
+		<input type="hidden" th:field="*{rucher}" />
+		<input type="hidden" th:field="*{essaim}" />
+		<input type="hidden" th:field="*{hausse}" />
+		<div th:replace="includeForm :: dateField"></div>
+		<div class="form-floating mb-3">
+			<input placeholder=""
+				class="form-control" type="number" step="0.001"
+				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
+			<label class="form-label" for="valeur" th:text="#{poidskg}"></label>
+		</div>
+		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
