--- a/src/main/resources/templates/evenement/evenementSucreDetail.html
+++ b/src/main/resources/templates/evenement/evenementSucreDetail.html
@@ -3,9 +3,10 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const suppeve = /*[[#{supprimerevenement}]]*/ null;
 $(document).ready(function() {
 	$('.confirmation').on('click', function () {
-			return confirm([[#{supprimerevenement}]]);
+			return confirm(suppeve);
 		});
 });
 </script>
@@ -26,7 +27,7 @@ $(document).ready(function() {
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/evenement/modifie/'+${evenement.id}}"> <span
+				<a th:href="@{'/evenement/essaim/sucre/modifie/'+${evenement.id}}"> <span
 					class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
 				</a> 
 				<a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
