--- a/src/main/resources/templates/essaim/essaimSucreForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreForm.html
@@ -38,7 +38,7 @@
 			<div class="col">
 				<h1 class="item">
 				<th:block th:text="#{ajoutSucre} + ' '"></th:block>
-				  <a th:href="@{'/essaim/'+${essaimId}}"
+				  <a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
 					th:text="#{essaim} + ' ' + ${evenement.essaim?.nom}"></a>
 				</h1>			
 				<th:block th:text="${valeurESSAIMSUCRE}?
