--- a/src/main/resources/templates/evenement/evenementCommRucherDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommRucherDetail.html
@@ -21,13 +21,13 @@ $(document).ready(function() {
 			<div class="col">			
 				<h1 class="item">
 					<a th:if="${type}==''" th:href="@{'/evenement/liste'}" th:text="#{evenement}"></a>
-					<a th:if="${type}=='essaim'" th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}" th:text="#{evenement}"></a>					
+					<a th:if="${type}=='rucher'" th:href="@{'/evenement/rucher/'+${evenement.rucher.id}}" th:text="#{evenement}"></a>					
 					<a th:if="${type=='comment'}" th:href="@{'/evenement/listecomment'}" th:text="#{evenementscomm}"></a>
 					<th:block th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/evenement/essaim/commentaire/modifie/'+${evenement.id}}"> <span
+				<a th:href="@{'/evenement/rucher/commentaire/modifie/'+${evenement.id}}"> <span
 					class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
 				</a> 
 				<a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
@@ -42,8 +42,6 @@ $(document).ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
 					<th style="background-color: LemonChiffon" th:text="#{NotificationJoursAvant}"></th>
 					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
@@ -52,10 +50,6 @@ $(document).ready(function() {
 			<tbody>
 				<tr>
 					<td th:text="#{${evenement.type}}"></td>
-					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}"
-						th:text="${evenement.ruche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
-						th:text="${evenement.essaim?.nom}"></a></td>
 					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
 						th:text="${evenement.rucher?.nom}"></a></td>
 					<td class="num" th:text="${evenement.valeur}"></td>
