--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -35,18 +35,21 @@
 			<div class="col">
 				<h1 class="item">
 				<th:block th:text="#{commentaire} + ' '"></th:block>
-				  <a th:href="@{'/rucher/'+${rucherId}}"
-					th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+				<a th:href="@{'/rucher/' + ${evenement.rucher?.id}}"
+						th:text="#{rucher} + ' ' + ${evenement.rucher?.nom}"></a>
 				</h1>
         	</div>
         </div>
     </div>
-	<form action="#" th:action="@{'/evenement/rucher/sauve/'+${rucher.id}}"
-		method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIRERUCHER"/>
-		<div th:replace="includeForm :: date"></div>
-		<div th:replace="includeForm :: commentaire"></div>
-		<div th:replace="includeForm :: notifDelai"></div>
+    <form action="#" th:action="@{'/evenement/rucher/sauve2'}"
+		th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden"
+			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
+			type="hidden" th:field="*{rucher}" /> <input type="hidden"
+			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
+		<div th:replace="includeForm :: dateField"></div>
+		<div th:replace="includeForm :: commentaireField"></div>
+		<div th:replace="includeForm :: notifDelaiField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
