evenement commentaire hausse

--- a/src/main/resources/templates/hausse/hausseCommentaireForm.html
+++ b/src/main/resources/templates/hausse/hausseCommentaireForm.html
@@ -36,19 +36,21 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{commentaire} + ' '"></th:block>
-					<a th:href="@{'/hausse/'+${hausseId}}"
-						th:text="#{hausse} + ' ' + ${hausse.nom}"></a>
+					<a th:href="@{'/hausse/' + ${evenement.hausse?.id}}"
+						th:text="#{hausse} + ' ' + ${evenement.hausse?.nom}"></a>
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/hausse/sauve/'+${hausse.id}}"
-		method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement"
-			value="COMMENTAIREHAUSSE" />
-		<div th:replace="includeForm :: date"></div>
-		<div th:replace="includeForm :: commentaire"></div>
-		<div th:replace="includeForm :: notifDelai"></div>
+	<form action="#" th:action="@{'/evenement/hausse/sauve2'}"
+		th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden"
+			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
+			type="hidden" th:field="*{rucher}" /> <input type="hidden"
+			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
+		<div th:replace="includeForm :: dateField"></div>
+		<div th:replace="includeForm :: commentaireField"></div>
+		<div th:replace="includeForm :: notifDelaiField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
