--- a/src/main/resources/templates/essaim/essaimSucreForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreForm.html
@@ -47,7 +47,7 @@
         	</div>
         </div>
     </div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve2'}"
+	<form action="#" th:action="@{'/evenement/essaim/sauve'}"
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}" />
 		<input type="hidden" th:field="*{type}" />
