--- a/src/main/resources/templates/hausse/hausseCommentaireForm.html
+++ b/src/main/resources/templates/hausse/hausseCommentaireForm.html
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/hausse/sauve2'}"
+	<form action="#" th:action="@{'/evenement/hausse/sauve'}"
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}" /> <input type="hidden"
 			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
