--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -25,9 +25,9 @@
 <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
 <script th:src="@{/js/jquery-ui-1.13.2/jquery-ui.min.js}"></script>
 <script th:src="@{/js/jquery.validate.min-1.19.5.js}"></script>
-<script th:src="@{/js/bootstrap-5.2.0-beta1/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/bootstrap-5.2.0/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/bootstrap-5.2.0-beta1/bootstrap.min.css}" />
+	th:href="@{/js/bootstrap-5.2.0/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.12.1/datatables.min.js}"></script>
 <script th:inline="javascript">
 if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
