--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -1,23 +1,24 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
+<link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script>
 	$().ready(function() {
 		$("#commentaire").focus();
-		$('#finTraitement').on('click', function () {
+		$('#finTraitement').on('click', function() {
 			if ($(this).is(':checked')) {
 				$('#typeEvenement').attr('value', "ESSAIMTRAITEMENTFIN");
-			} else {		
+			} else {
 				$('#typeEvenement').attr('value', "ESSAIMTRAITEMENT");
 			}
-	    });
+		});
 		$("#evenementForm").validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
+			errorClass : 'erreur-form',
+			errorPlacement : function(error, element) {
+				error.insertBefore(element.closest('div'));
 			},
 			rules : {
 				date : {
@@ -40,23 +41,40 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				<th:block th:text="#{traitement} + ' '"></th:block>
-				  <a th:href="@{'/essaim/'+${essaimId}}"
-					th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
+					<th:block th:text="#{traitement} + ' '"></th:block>
+					<a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
+						th:text="#{essaim} + ' ' + ${evenement.essaim?.nom}"></a>
 				</h1>
-				<th:block th:text="${dateESSAIMTRAITEMENT}?
+				<th:block
+					th:text="${dateESSAIMTRAITEMENT}?
 				'Traité le '+${#temporals.format(dateESSAIMTRAITEMENT, 'dd/MM/yyyy')}:''">
-		        </th:block>
+				</th:block>
 			</div>
-        </div>
-    </div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/' + ${essaim.id}}"
-		method="post" id="evenementForm">
-		<input type="hidden" id="valeur" name="valeur"/>
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="ESSAIMTRAITEMENT" />
-		<div th:replace="includeForm :: date"></div>
-		<div th:replace="includeForm :: finTraitement"></div>
-		<div th:replace="includeForm :: commentaire"></div>
+		</div>
+	</div>
+	<form action="#" th:action="@{'/evenement/essaim/sauve'}"
+		th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden"
+			th:field="*{ruche}" /> <input type="hidden" th:field="*{rucher}" />
+		<input type="hidden" th:field="*{essaim}" /> <input type="hidden"
+			th:field="*{hausse}" />
+		<div th:replace="includeForm :: dateField"></div>
+		<div class="form-floating mb-3 ruches">
+			<select id="type" name="type" class="form-control">
+				<option
+					th:each="typeEve : ${ {T(ooioo.ruches.evenement.TypeEvenement).ESSAIMTRAITEMENT,  T(ooioo.ruches.evenement.TypeEvenement).ESSAIMTRAITEMENTFIN} }"
+					th:value="${typeEve}" th:text="#{${typeEve}}"
+					th:selected="${typeEve}==*{type}"></option>
+			</select> <label class="form-label" for="type" th:text="#{typeEvenement}"></label>
+		</div>
+		
+		<div class="form-floating mb-3">
+			<input placeholder="" class="form-control" type="number" step="0.001"
+				th:field="*{valeur}" th:errorclass="fieldError" /> <label
+				class="form-label" th:text="#{quantite}" for="valeur"></label>
+		</div>
+		
+		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
