--- a/src/main/resources/templates/ruche/ruchePeseeForm.html
+++ b/src/main/resources/templates/ruche/ruchePeseeForm.html
@@ -38,20 +38,23 @@
 			<div class="col">
 				<h1 class="item">
 				  <th:block th:text="#{pesee} + ' '"></th:block>
-				  <a th:href="@{'/essaim/'+${ruche.essaim.id}}"
-					th:text="#{essaim} + ' ' + ${ruche.essaim.nom}"></a>
+				  <a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
+					th:text="#{essaim} + ' ' + ${evenement.essaim?.nom}"></a>
 				</h1>
 				<th:block th:text="${valeurRUCHEPESEE}?${#numbers.formatDecimal(valeurRUCHEPESEE,1,2)}+'kg le '+${#temporals.format(dateRUCHEPESEE,'dd/MM/yyyy')}:''">				
 				</th:block>
         	</div>
         </div>
     </div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/'+${ruche.essaim.id}}"
-		method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="RUCHEPESEE" />
-		<div th:replace="includeForm :: date"></div>
-		<div th:replace="includeForm :: poidskg"></div>
-		<div th:replace="includeForm :: commentaire"></div>
+    <form action="#" th:action="@{'/evenement/essaim/sauve'}"
+		th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden"
+			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
+			type="hidden" th:field="*{rucher}" /> <input type="hidden"
+			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
+		<div th:replace="includeForm :: dateField"></div>
+		<div th:replace="includeForm :: poidskgField"></div>
+		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
