Notifications n jours avant ou n après si n négatif. Sprig boot 5.7.2

--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -33,10 +33,7 @@ $(document).ready(function() {
 				<h1 class="item" th:text="#{Notifications}"></h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/evenement/ganttNotif'}"> <span
-					class="bi bi-bar-chart-steps" th:title="#{Gantt}"
-					aria-hidden="true"></span>
-				</a> &nbsp; <span class="padicons"> <input type="checkbox"
+				<span class="padicons"> <input type="checkbox"
 					id="groupe" th:title="#{tous}" th:checked="${tous}" /> <label
 					for="tous" th:text="#{tous}"></label>
 				</span>
@@ -54,9 +51,7 @@ $(document).ready(function() {
 					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{Persistant}"></th>
 					<th style="background-color: LemonChiffon" th:text="#{JoursAvant}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{Fin}"></th>
 					<th style="background-color: lightskyblue" th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -70,11 +65,7 @@ $(document).ready(function() {
 					<td th:text="${evenement.essaim?.nom}"></td>
 					<td th:text="${evenement.rucher?.nom}"></td>
 					<td th:text="${evenement.hausse?.nom}"></td>
-					<td
-						th:text="${#strings.substring(evenement.valeur,0,1)} == '-' ? #{oui} : #{non}"></td>
 					<td th:text="${jAvants[evenementStat.index]}"></td>
-					<td
-						th:text="${#temporals.format(fin[evenementStat.index], 'yyyy/MM/dd HH:mm')}"></td>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>
 			</tbody>
