--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -41,7 +41,7 @@
         	</div>
         </div>
     </div>
-    <form action="#" th:action="@{'/evenement/rucher/sauve'}"
+    <form action="#" th:action="@{'/evenement/rucher/commentaire/sauve'}"
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}" /> <input type="hidden"
 			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
