--- a/src/main/resources/templates/evenement/evenementCommRucherDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommRucherDetail.html
@@ -3,12 +3,12 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
-const suppeve = /*[[#{supprimerevenement}]]*/ null;
-$(document).ready(function() {
-	$('.confirmation').on('click', function () {
+	const suppeve = /*[[#{supprimerevenement}]]*/null;
+	$(document).ready(function() {
+		$('.confirmation').on('click', function() {
 			return confirm(suppeve);
 		});
-});
+	});
 </script>
 </head>
 <body>
@@ -18,32 +18,45 @@ $(document).ready(function() {
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col">			
+			<div class="col">
 				<h1 class="item">
-					<a th:if="${type}==''" th:href="@{'/evenement/liste'}" th:text="#{evenement}"></a>
-					<a th:if="${type}=='rucher'" th:href="@{'/evenement/rucher/'+${evenement.rucher.id}}" th:text="#{evenement}"></a>					
-					<a th:if="${type=='comment'}" th:href="@{'/evenement/listecomment'}" th:text="#{evenementscomm}"></a>
-					<th:block th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+					<a th:if="${type}==''" th:href="@{'/evenement/liste'}"
+						th:text="#{evenement}"></a> <a th:if="${type}=='rucher'"
+						th:href="@{'/evenement/rucher/'+${evenement.rucher.id}}"
+						th:text="#{evenement}"></a> <a th:if="${type=='comment'}"
+						th:href="@{'/evenement/listecomment'}" th:text="#{evenementscomm}"></a>
+					<th:block
+						th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/evenement/rucher/commentaire/modifie/'+${evenement.id}}"> <span
-					class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
-				</a> 
-				<a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
-					class="confirmation bi bi-trash" style="color:red" th:title="#{supprimer}"
+				<a
+					th:href="@{'/evenement/rucher/commentaire/modifie/'+${evenement.id}}">
+					<span class="bi bi-pencil" th:title="#{modifier}"
 					aria-hidden="true"></span>
+				</a> <a id="supprime"
+					th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
+					class="confirmation bi bi-trash" style="color: red"
+					th:title="#{supprimer}" aria-hidden="true"></span>
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid table-responsive">
-		<table class="table table-sm table-bordered table-striped" id="evenements">
+		<table class="table table-sm table-bordered table-striped"
+			id="evenements"
+			th:with="val=${#strings.equals(evenement.valeur,'')?'':#strings.substring(evenement.valeur, 0, 1)}">
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{NotificationJoursAvant}"></th>
+					<th:block th:switch="${val}">
+						<th:block th:case="''"></th:block>
+						<th th:case="'-'" style="background-color: LemonChiffon"
+							th:text="#{NotificationJoursApres}"></th>
+						<th th:case="*" style="background-color: LemonChiffon"
+							th:text="#{NotificationJoursAvant}"></th>
+					</th:block>
 					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -52,7 +65,12 @@ $(document).ready(function() {
 					<td th:text="#{${evenement.type}}"></td>
 					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
 						th:text="${evenement.rucher?.nom}"></a></td>
-					<td class="num" th:text="${evenement.valeur}"></td>
+					<th:block th:switch="${val}">
+						<th:block th:case="''"></th:block>
+						<td th:case="'-'" class="num"
+							th:text="${#strings.substring(evenement.valeur, 1)}"></td>
+						<td th:case="*" class="num" th:text="${evenement.valeur}"></td>
+					</th:block>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>
 			</tbody>
