--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -30,18 +30,22 @@
 	th:href="@{/js/bootstrap-5.2.0/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.12.1/datatables.min.js}"></script>
 <script th:inline="javascript">
+const urlValMessFr = /*[[@{/js/jquery.validate-1.19.5-messages_fr.min.js}]]*/ null;
+const urlDatatMessFr = /*[[@{/js/datatables_fr.json}]*/ null;
+const datatPageLength = /*[[${@environment.getProperty('datatables.pageLength')}]]*/ null;
+const tout = /*[[#{Tout}]]*/ null;
 if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
-	jQuery.getScript([[@{/js/jquery.validate-1.19.5-messages_fr.min.js}]]);
+	jQuery.getScript(urlValMessFr);
 	$.extend( true, $.fn.dataTable.defaults, {
 		language: {
-        	url: [[@{/js/datatables_fr.json}]]
+        	url: urlDatatMessFr
     	},
 	});
 }
 $.extend( true, $.fn.dataTable.defaults, {
 	stateSave: true,
-	lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, [[#{Tout}]] ] ],
-	pageLength: parseInt([[${@environment.getProperty('datatables.pageLength')}]]),
+	lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, tout ] ],
+	pageLength: parseInt(datatPageLength),
 });
 </script>
 <th:block th:replace="${scripts} ?: ~{}" />
@@ -49,7 +53,7 @@ $.extend( true, $.fn.dataTable.defaults, {
 <th:block th:replace="${links} ?: ~{}" />
 </head>
 
-<script th:fragment="d3" th:src="@{/js/d3.min-7.4.4.js}"></script>
+<script th:fragment="d3" th:src="@{/js/d3.min-7.6.1.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.1.0.js}"></script>
 <script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
 <script th:fragment="d3-scale-chromatic" th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
